--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 [Bb]uilds/
 [Aa]ssets/AssetStoreTools*
 
+########################################################################################
+##https://drive.google.com/drive/folders/1X_SGpkzS53fHnObEy10h1BNq1DmL3b8T?usp=sharing##
+########################################################################################
+
 # Assets/Editor/
 x64/
 
@@ -14,8 +18,14 @@ NatureManufacture/
 # Assets/PrefabAssets/HEROIC/
 HEROIC/
 
+########################################################################################
+########################################################################################
+
 # Visual Studio cache directory
 .vs/
+
+# Zip Files
+*.zip
 
 #Plugins folder and meta files
 !/[Aa]ssets/**/*.meta
