--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ NatureManufacture/
 # Assets/PrefabAssets/HEROIC/
 HEROIC/
 
+# Assets/3D Assets
+3D Assets
+
 ########################################################################################
 ########################################################################################
 
